# gen_trade

./: .dockerignore  .gitignore  README.md  async_caller.py  best_strategy.json  binance_download.py  df_adapter.py  dockerfile  ec2_strategies.json  ecr_push.sh  env.py  evaluation.py  fitness_functions.py  generate_blank_signals.py  generate_strategy.py  genetic.py  genetic_async.py  helpers.py  input_strategies.json  load_strategy.py  logger.py  profit_calculator.py  pyproject.toml  run.sh  run_strategy.py  run_strategy_async.py  signal.json  signals.json  strategy.py  ta_trends.py  terraform.tfstate  test_s3.py  user_data.sh
iac/: blah  ec2_connect  ecr_pull.sh  fargate_main._tf_  main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
signals/: absolute_signals.json  relative_signals.json
tests/: test_async_caller.py  test_generate_strategy.py  test_load_strategy.py
